--- a/practice/client/client.ui
+++ b/practice/client/client.ui
@@ -6,20 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>756</width>
-    <height>534</height>
+    <width>473</width>
+    <height>429</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>756</width>
-    <height>534</height>
+    <width>450</width>
+    <height>400</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Чат Программа alpha release</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <widget class="QLabel" name="label_contacts">
     <property name="geometry">
      <rect>
@@ -37,8 +40,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>450</y>
-      <width>121</width>
+      <y>260</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
@@ -49,9 +52,9 @@
    <widget class="QPushButton" name="btn_remove_contact">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>450</y>
-      <width>121</width>
+      <x>10</x>
+      <y>300</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
@@ -62,9 +65,9 @@
    <widget class="QLabel" name="label_history">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>170</x>
       <y>0</y>
-      <width>391</width>
+      <width>291</width>
       <height>21</height>
      </rect>
     </property>
@@ -75,9 +78,9 @@
    <widget class="QTextEdit" name="text_message">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>360</y>
-      <width>441</width>
+      <x>170</x>
+      <y>270</y>
+      <width>301</width>
       <height>71</height>
      </rect>
     </property>
@@ -85,8 +88,8 @@
    <widget class="QLabel" name="label_new_message">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>330</y>
+      <x>170</x>
+      <y>250</y>
       <width>171</width>
       <height>16</height>
      </rect>
@@ -100,27 +103,27 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>251</width>
-      <height>411</height>
+      <width>151</width>
+      <height>231</height>
      </rect>
     </property>
    </widget>
    <widget class="QListView" name="list_messages">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>170</x>
       <y>20</y>
-      <width>441</width>
-      <height>301</height>
+      <width>301</width>
+      <height>231</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_send">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>450</y>
-      <width>131</width>
+      <x>300</x>
+      <y>350</y>
+      <width>171</width>
       <height>31</height>
      </rect>
     </property>
@@ -131,8 +134,8 @@
    <widget class="QPushButton" name="btn_clear">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>450</y>
+      <x>170</x>
+      <y>350</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -147,8 +150,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>756</width>
-     <height>21</height>
+     <width>473</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
